# openflow-crunchy-postgres-to-snowflake

./: .gitignore  CRUNCHY_SETUP.md  README.md  combined_customer_management.py  console.sql  main.py  pyproject.toml  requirements.txt  retail.sql  setup_roles.sql
