[project]
name = "openflow-quickstart"
version = "0.1.0"
description = "Openflow CDC Quickstart: PostgreSQL to Snowflake using Crunchy Bridge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=1.5.0",
    "faker>=20.0.0",
    "psycopg2-binary>=2.9.0",
    "snowflake-connector-python>=3.0.0",
    "cryptography>=41.0.0",
    "PyJWT>=2.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
